--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 .container {
-    width: 450px;
-
+    width: 600px;
     font-size: 20px;
 }
 
@@ -30,4 +30,32 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 25px;
+}
+
+
+.titulo {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 78px;
+    font-weight: bolder;
+    text-align: center;
+}
+.fonteEspecial{
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 45px;
+}
+
+.espacamento {
+    padding: 25px;
+}
+
+.paragrafo {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 30px;
+    font-weight: 600;
+}
+
+div > input {
+    width: 150px;
+    height: 50px;
+    align-self: center;
 }
